--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,17 @@ version: '3.12'
 
 services:
   llm-service:
-    build: .
+    build:
+      context: .  # Ensures Docker copies files from your project folder
+      dockerfile: Dockerfile
     container_name: llm-container
     volumes:
       - .:/app
+      - pipenv-packages:/root/.local  # Named volume for dependencies
     working_dir: /app
     stdin_open: true
     tty: true
     command: bash -c "pipenv install --system && /bin/bash" #to automatically update pipenv.lock, so that when rebuild no need to pipenv install again
+
+volumes:
+  pipenv-packages:
