--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,6 @@
 model: 
-  name: gpt-3.5-turbo
-  provider: openai
+  name: test #gpt-3.5-turbo #
+  provider: test
   temperature: 1.0
   max_tokens: 200
 
