--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,6 @@
 model: 
-  name: test #gpt-3.5-turbo #
-  provider: test
+  name: gpt-3.5-turbo-instruct # gpt-3.5-turbo #gpt-3.5-turbo #gpt-4o
+  provider: openai #test
   temperature: 1.0
   max_tokens: 200
 
