--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,8 @@
 model: 
-  name: gpt-3.5-turbo-instruct # gpt-3.5-turbo #gpt-3.5-turbo #gpt-4o
-  provider: openai #test
+  name: gpt-4o-mini #gpt-3.5-turbo-instruct # gpt-3.5-turbo #gpt-3.5-turbo #gpt-4o
+  is_function_call: True
+  provider: openai #openai #test
+  reasoning: BDI
   temperature: 1.0
   max_tokens: 200
 
