--- a/src/config.yml
+++ b/src/config.yml
@@ -1,19 +1,20 @@
 model: 
-  name: gpt-4o-mini #gpt-4o-mini #gpt-3.5-turbo-instruct # gpt-3.5-turbo #gpt-3.5-turbo #gpt-4o
+  name: gpt-3.5-turbo-instruct #gpt-4o-mini #gpt-3.5-turbo-instruct # gpt-3.5-turbo #gpt-3.5-turbo #gpt-4o
   is_function_call: False
   provider: openai #openai #test
   reasoning: BDI
-  temperature: 1.0
+  temperature: 0.1
   max_tokens: 1024
 
 experiment:
   name: lottery_test
   output_dir: results
+  switching_point: first #first, last
 
 file_path:
   file_path_persona_info: prompt/persona-default.json
   file_path_lottery_choices_instruction: prompt/games_instruction-test.json
-  file_path_lottery_choices: prompt/lottery_choices.json
+  file_path_lottery_choices: prompt/lottery_choices-test.json
 
 logging:
   level: DEBUG # Change to INFO, WARNING, ERROR, DEBUG etc.
